--- a/flashcards/src/App.css
+++ b/flashcards/src/App.css
@@ -2,19 +2,20 @@
   text-align: center;
 }
 
-.App-logo {
+.logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .logo {
+    animation-duration: 3s;
+    animation-name: slidein;
   }
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: purple;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,15 +25,45 @@
   color: white;
 }
 
+
 .App-link {
   color: #61dafb;
 }
+.button {
+  padding: 10px;
+  background-color: rgb(252, 219, 147);
+  border-radius: 8px;
+  border-color: white;
 
-@keyframes App-logo-spin {
+}
+.button:hover{
+  background-color: rgb(251, 192, 253);
+  font-size: 14pt ;
+  font-weight: bold;
+  color:purple;
+}
+.menu{
+  background-color: purple;
+  color:white;
+  font-size: 14pt;
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  margin: 2rem;
+  gap: 30px;
+}
+.menubar{
+background-color: none;
+color: blueviolet;
+}
+@keyframes slidein {
   from {
-    transform: rotate(0deg);
+    margin-left: 5%;
+    width: 100%;
   }
+
   to {
-    transform: rotate(360deg);
+    margin-right: 5%;
+    width: 100%;
   }
 }
