--- a/flashcards/src/App.css
+++ b/flashcards/src/App.css
@@ -24,7 +24,13 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+.body {
+background-color:purple;
+margin:-2rem;
+padding-left: 2rem;
+padding-bottom: 2rem;
+flex-direction: row;
+}
 
 .App-link {
   color: #61dafb;
@@ -56,6 +62,25 @@
 background-color: none;
 color: blueviolet;
 }
+.cards{
+  background-color: rgb(255, 242, 255);
+  color:grey;
+  font-weight: lighter;
+  width: 250px;
+  height: 300px;
+  padding-top: 10px;
+  margin: 2rem;
+  flex-direction: row;
+  align-items: center;
+}
+.right-container{
+ 
+  margin-left: 70px;
+  padding-left: 70px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+ }
 @keyframes slidein {
   from {
     margin-left: 5%;
